--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-fluid": "^1.9.7",
-    "hexo-theme-landscape": "^1.0.0"
+    "hexo-theme-landscape": "^1.0.0",
+    "mime-db": "^1.53.0",
+    "mime-types": "^2.1.35"
   }
 }
